--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
+  },
+  "volta": {
+    "node": "18.20.8"
   }
 }
